--- a/src/TurboRango/TurboRango.Web/Views/Shared/_Layout.cshtml
+++ b/src/TurboRango/TurboRango.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @if (Request.IsAuthenticated)
+                    { //User.Identity.IsAuthenticated
                     <li>@Html.ActionLink("Restaurantes", "Index", "Restaurantes")</li>
+                    }
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
