--- a/src/TurboRango/TurboRango.Web/Views/Home/Index.cshtml
+++ b/src/TurboRango/TurboRango.Web/Views/Home/Index.cshtml
@@ -1,9 +1,11 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-
-<div class="jumbotron">
+<link rel="stylesheet" href="~/Scripts/bootstrap.mi.js" type="text/css">
+<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="site.css">
+<div class="jumbotron body">
     <h1>TurboRango</h1>
     <p class="lead">Decida onde comer</p>
-    <p><a href="http://google.com" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <p><a href="http://google.com" class="btn btn-primary btn-lg" style="background-color: #7f8c8d">Learn more &raquo;</a></p>
 </div>
