--- a/src/TurboRango/TurboRango.Web/Content/Site.css
+++ b/src/TurboRango/TurboRango.Web/Content/Site.css
@@ -1,5 +1,6 @@
 ﻿body {
     padding-top: 50px;
+    background-color: #2c3e50;
     padding-bottom: 20px;
 }
 
@@ -7,6 +8,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    color:#7f8c8d;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
