Atualizações no turboRango

--- a/src/TurboRango/TurboRango.Web/Views/Restaurantes/Index.cshtml
+++ b/src/TurboRango/TurboRango.Web/Views/Restaurantes/Index.cshtml
@@ -6,13 +6,14 @@
 @{
     ViewBag.Title = "Index";
 }
-
+<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" href="site.css">
 <h2>Index</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table fonte">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.Nome)
