--- a/src/TurboRango/TurboRango.Web/Content/Site.css
+++ b/src/TurboRango/TurboRango.Web/Content/Site.css
@@ -2,13 +2,14 @@
     padding-top: 50px;
     background-color: #2c3e50;
     padding-bottom: 20px;
+    color: white;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
-    color:#7f8c8d;
+    
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -27,4 +28,20 @@ textarea {
 
 .jumbotron h1 {
     display: inline;
+}
+
+.buttonColor {
+    background-color:#f39c12;
+}
+
+.fonte {
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: white;
+    font-size: medium;
+}
+
+.fonteTitulo {
+    font-family: 'Open Sans Condensed', sans-serif;
+    color: black;
+    font-size: xx-large;
 }
