--- a/src/TurboRango/TurboRango.Web/Views/Home/Index.cshtml
+++ b/src/TurboRango/TurboRango.Web/Views/Home/Index.cshtml
@@ -1,13 +1,15 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
-<link rel="stylesheet" href="~/Scripts/bootstrap.mi.js" type="text/css">
-<link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans+Condensed:700,300' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="site.css">
-<div class="jumbotron body">
-    <h1>TurboRango</h1>
-    <p class="lead">Decida onde comer</p>
-    <p><a href="http://google.com" class="btn btn-primary btn-lg" style="background-color: #7f8c8d">Learn more &raquo;</a></p>
-    <p>@Html.ActionLink("Começar »", "Index", "Sorteios", null, new { @class = "btn btn-primary btn-lg" })</p>
+<div class="jumbotron">
+    <h1>
+        <span style="color:black;">TurboRango</span>
+    </h1>
+
+    <p class="lead fonteTitulo">Decida onde comer</p>
+   <br />
+    <p>@Html.ActionLink("Começar »", "Index", "Sorteios", null, new { @class = "btn btn-primary btn-lg buttonColor"})</p>
 
 </div>
